testsuite/tests/typecheck/should_fail/T7645.stderr

T7645.hs:8:26: error:
    • Expecting one more argument to ‘Maybe’
      Expected a type, but ‘Maybe’ has kind ‘* -> *’
    • In the type signature: f :: ((+) a (a :: Type), Maybe)
